src/objects/customer__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <description>Customer name</description>
        <inlineHelpText>Please enter customer&apos;s name</inlineHelpText>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <description>Stores name of the customers</description>
        <inlineHelpText>please enter customer name</inlineHelpText>
        <label>Customer Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>phone__c</fullName>
        <label>phone</label>
        <type>Phone</type>
    </fields>
    <label>Customer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CS-{0000}</displayFormat>
        <label>customers Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>